corpus/kernel/6.8/virt/kvm/index.md
---
collection: kernel
version: "6.8"
title: "KVM"
source_url: https://www.kernel.org/doc/html/v6.8/virt/kvm/index.html
fetched_at: 2026-08-21T03:52:43+00:00
---
# KVM

- [The Definitive KVM (Kernel-based Virtual Machine) API Documentation](api.md)
  - [1. General description](api.md#general-description)
  - [2. File descriptors](api.md#file-descriptors)
  - [3. Extensions](api.md#extensions)
  - [4. API description](api.md#api-description)
  - [5. The kvm_run structure](api.md#the-kvm-run-structure)
  - [6. Capabilities that can be enabled on vCPUs](api.md#capabilities-that-can-be-enabled-on-vcpus)
  - [7. Capabilities that can be enabled on VMs](api.md#capabilities-that-can-be-enabled-on-vms)
  - [8. Other capabilities.](api.md#other-capabilities)
  - [9. Known KVM API problems](api.md#known-kvm-api-problems)
- [Devices](devices/index.md)
  - [ARM Virtual Interrupt Translation Service (ITS)](devices/arm-vgic-its.md)
  - [ARM Virtual Generic Interrupt Controller v2 (VGIC)](devices/arm-vgic.md)
  - [ARM Virtual Generic Interrupt Controller v3 and later (VGICv3)](devices/arm-vgic-v3.md)
  - [MPIC interrupt controller](devices/mpic.md)
  - [FLIC (floating interrupt controller)](devices/s390_flic.md)
  - [Generic vcpu interface](devices/vcpu.md)
  - [VFIO virtual device](devices/vfio.md)
  - [Generic vm interface](devices/vm.md)
  - [XICS interrupt controller](devices/xics.md)
  - [POWER9 eXternal Interrupt Virtualization Engine (XIVE Gen1)](devices/xive.md)
- [ARM](arm/index.md)
  - [Internal ABI between the kernel and HYP](arm/hyp-abi.md)
  - [ARM Hypercall Interface](arm/hypercalls.md)
  - [Paravirtualized time support for arm64](arm/pvtime.md)
  - [PTP_KVM support for arm/arm64](arm/ptp_kvm.md)
  - [vCPU feature selection on arm64](arm/vcpu-features.md)
- [KVM for s390 systems](s390/index.md)
  - [The s390 DIAGNOSE call on KVM](s390/s390-diag.md)
  - [s390 (IBM Z) Ultravisor and Protected VMs](s390/s390-pv.md)
  - [s390 (IBM Z) Boot/IPL of Protected VMs](s390/s390-pv-boot.md)
  - [s390 (IBM Z) Protected Virtualization dumps](s390/s390-pv-dump.md)
- [The PPC KVM paravirtual interface](ppc-pv.md)
  - [Querying for existence](ppc-pv.md#querying-for-existence)
  - [KVM hypercalls](ppc-pv.md#kvm-hypercalls)
  - [The magic page](ppc-pv.md#the-magic-page)
  - [Magic page features](ppc-pv.md#magic-page-features)
  - [Magic page flags](ppc-pv.md#magic-page-flags)
  - [MSR bits](ppc-pv.md#msr-bits)
  - [Patched instructions](ppc-pv.md#patched-instructions)
  - [Hypercall ABIs in KVM on PowerPC](ppc-pv.md#hypercall-abis-in-kvm-on-powerpc)
- [KVM for x86 systems](x86/index.md)
  - [Secure Encrypted Virtualization (SEV)](x86/amd-memory-encryption.md)
  - [KVM CPUID bits](x86/cpuid.md)
  - [Known limitations of CPU virtualization](x86/errata.md)
  - [Linux KVM Hypercall](x86/hypercalls.md)
  - [The x86 kvm shadow mmu](x86/mmu.md)
  - [KVM-specific MSRs](x86/msr.md)
  - [Nested VMX](x86/nested-vmx.md)
  - [Running nested guests with KVM](x86/running-nested-guests.md)
  - [Timekeeping Virtualization for X86-Based Architectures](x86/timekeeping.md)
- [KVM Lock Overview](locking.md)
  - [1. Acquisition Orders](locking.md#acquisition-orders)
  - [2. Exception](locking.md#exception)
  - [3. Reference](locking.md#reference)
- [KVM VCPU Requests](vcpu-requests.md)
  - [Overview](vcpu-requests.md#overview)
  - [VCPU Request Internals](vcpu-requests.md#vcpu-request-internals)
  - [VCPU Requests with Associated State](vcpu-requests.md#vcpu-requests-with-associated-state)
  - [Ensuring Requests Are Seen](vcpu-requests.md#ensuring-requests-are-seen)
  - [Additional Considerations](vcpu-requests.md#additional-considerations)
  - [References](vcpu-requests.md#references)
- [The KVM halt polling system](halt-polling.md)
  - [Halt Polling Interval](halt-polling.md#halt-polling-interval)
  - [Module Parameters](halt-polling.md#module-parameters)
  - [KVM_CAP_HALT_POLL](halt-polling.md#kvm-cap-halt-poll)
  - [Further Notes](halt-polling.md#further-notes)
- [Review checklist for kvm patches](review-checklist.md)
